--- a/index.html
+++ b/index.html
@@ -44,23 +44,11 @@
             <input type="text" id="itemNo">
             
             <label>Type</label>
-            <input list="type-options" id="itemType">
+            <input list="type-options" id="itemType" placeholder="Select or type...">
             <datalist id="type-options">
-                    <option value="Sofa">
-                    <option value="Armchair">
-                    <option value="Chair">
-                    <option value="Table">
-                    <option value="Coffee Table">
-                    <option value="Side Table">
-                    <option value="Bed">
-                    <option value="Bench">
-                    <option value="Night Table">
-                    <option value="Daybed/Ottoman/Stool">
-                    <option value="Console Cabinet">
-                    <option value="Desk">
-                    <option value="Bookcase">
-                    <option value="Pillow">
-                    <option value="Others">
+                <option value="Chair">
+                <option value="Bed">
+                <option value="Table">
             </datalist>
 
             <label>Description</label>
@@ -129,7 +117,7 @@
                 if (data.found) {
                     document.getElementById('billNo').value = data.bill;
                     document.getElementById('itemNo').value = data.item;
-                    document.getElementById('itemType').value = data.type; // Populate Type
+                    document.getElementById('itemType').value = data.type || ""; 
                     document.getElementById('desc').value = data.desc;
                     document.getElementById('supplier').value = data.supplier;
                     document.getElementById('instNo').value = data.inst;
@@ -194,10 +182,10 @@
                 refCode: document.getElementById('searchRef').value,
                 bill: document.getElementById('billNo').value,
                 item: document.getElementById('itemNo').value,
-                type: document.getElementById('itemType').value, // Send Type
-                desc: document.getElementById('desc').value,
-                supplier: document.getElementById('supplier').value,
-                inst: document.getElementById('instNo').value,
+                type: document.getElementById('itemType').value || "-", 
+                desc: document.getElementById('desc').value || "-",
+                supplier: document.getElementById('supplier').value || "-",
+                inst: document.getElementById('instNo').value || "-",
                 amount: document.getElementById('amount').value
             };
 
@@ -205,7 +193,29 @@
                 await fetch(CONFIG.scriptUrl, { method: 'POST', mode: 'no-cors', body: JSON.stringify(payload) });
 
                 if (liff.isInClient()) {
-                    let msg = PENDING_ACTION === 'delete' ? `❌ *Delete ${payload.refCode}*` : `🔧 *Edit ${payload.refCode}*\n\n• Type: ${payload.type}\n• Amt: ฿${Number(payload.amount).toLocaleString()}`;
+                    let msg = "";
+                    if (PENDING_ACTION === 'delete') {
+                        msg = `❌ *Delete*\n\n` +
+                              `• Bill No: ${payload.bill}\n` +
+                              `• Item No: ${payload.item}\n` +
+                              `• Type: ${payload.type}\n` +
+                              `• Desc: ${payload.desc}\n` +
+                              `• Supplier: ${payload.supplier}\n` +
+                              `• Installment: ${payload.inst}\n` +
+                              `• Amount: ฿${Number(payload.amount).toLocaleString()}\n` +
+                              `• Ref: ${payload.refCode}`;
+                    } else {
+                        // FULL REPORT FOR EDIT
+                        msg = `🔧 *Edited*\n\n` +
+                              `• Bill No: ${payload.bill}\n` +
+                              `• Item No: ${payload.item}\n` +
+                              `• Type: ${payload.type}\n` +
+                              `• Desc: ${payload.desc}\n` +
+                              `• Supplier: ${payload.supplier}\n` +
+                              `• Installment: ${payload.inst}\n` +
+                              `• Amount: ฿${Number(payload.amount).toLocaleString()}\n` +
+                              `• Ref: ${payload.refCode}`;
+                    }
                     await liff.sendMessages([{ type: 'text', text: msg }, { type: 'text', text: payload.refCode }]);
                 }
 
