--- a/index.html
+++ b/index.html
@@ -46,9 +46,21 @@
             <label>Type</label>
             <input list="type-options" id="itemType" placeholder="Select or type...">
             <datalist id="type-options">
+                <option value="Sofa">
+                <option value="Armchair">
                 <option value="Chair">
-                <option value="Bed">
                 <option value="Table">
+                <option value="Coffee Table">
+                <option value="Side Table">
+                <option value="Bed">
+                <option value="Bench">
+                <option value="Night Table">
+                <option value="Daybed/Ottoman/Stool">
+                <option value="Console Cabinet">
+                <option value="Desk">
+                <option value="Bookcase">
+                <option value="Pillow">
+                <option value="Others">
             </datalist>
 
             <label>Description</label>
